adds routing adds mock data

--- a/frontend/src/app/meter-list/meter-list.component.html
+++ b/frontend/src/app/meter-list/meter-list.component.html
@@ -1,1 +1,15 @@
-<p>meter-list works!</p>
+<div class="logo"></div>
+<ul nz-menu nzTheme="dark" nzMode="inline">
+  <li nz-menu-item [routerLink]="'/meters/123'">
+    <span>nav 1</span>
+  </li>
+  <li nz-menu-item [routerLink]="'/meters/234'">
+    <span>nav 2</span>
+  </li>
+  <li nz-menu-item [routerLink]="'/meters/345'">
+    <span>nav 3</span>
+  </li>
+  <li nz-menu-item [routerLink]="'/meters/456'">
+    <span>nav 4</span>
+  </li>
+</ul>
