--- a/frontend/src/app/meter-detail/meter-detail.component.html
+++ b/frontend/src/app/meter-detail/meter-detail.component.html
@@ -3,6 +3,15 @@
 </div>
 <div *ngIf="meterId !== null">
   <nz-page-header class="site-page-header" nzTitle="Details for Meter XYZ" nzSubtitle="{{meterId}}"></nz-page-header>
-  <app-chart [meterId]="meterId"></app-chart>
+  <div id="time-range">
+    <button nz-button nzType="primary" (click)="previousPeriod()">
+      <i nz-icon nzType="left" nzTheme="outline"></i>
+    </button>
+    <span id="range-indicator">{{from | date:'dd.MM.yyyy'}} - {{to | date:'dd.MM.yyyy'}}</span>
+    <button nz-button nzType="primary" (click)="nextPeriod()">
+      <i nz-icon nzType="right" nzTheme="outline"></i>
+    </button>
+  </div>
+  <app-chart [meterId]="meterId" [from]="from" [to]="to"></app-chart>
   <app-alerts [meterId]="meterId"></app-alerts>
 </div>
