--- a/meter-ui/src/app/meter-detail/meter-detail.component.html
+++ b/meter-ui/src/app/meter-detail/meter-detail.component.html
@@ -13,5 +13,5 @@
     </button>
   </div>
   <app-chart [meterId]="meterId" [from]="from" [to]="to"></app-chart>
-  <app-alerts [meterId]="meterId"></app-alerts>
+  <app-alerts [meterId]="meterId" [from]="from" [to]="to"></app-alerts>
 </div>
