--- a/meter-ui/src/app/app.component.html
+++ b/meter-ui/src/app/app.component.html
@@ -9,6 +9,6 @@
         <router-outlet></router-outlet>
       </div>
     </nz-content>
-    <nz-footer>Smart Meter Anomaly Detection</nz-footer>
+    <nz-footer>&copy; by some dudes with some Laptops and internet access in some country&trade;</nz-footer>
   </nz-layout>
 </nz-layout>
