--- a/meter-ui/src/app/chart/chart.component.html
+++ b/meter-ui/src/app/chart/chart.component.html
@@ -1,1 +1,3 @@
-<div id="chart" style="width: 100%; height: 500px"></div>
+<div class="content">
+  <div id="chart" style="width: 100%; height: 500px"></div>
+</div>
