--- a/meter-ui/src/app/meter-list/meter-list.component.html
+++ b/meter-ui/src/app/meter-list/meter-list.component.html
@@ -1,15 +1,21 @@
-<div class="logo"></div>
+<div class="logo">
+  <img src="assets/logo_white.png" width="100" style="margin-left: 25px;">
+</div>
 <ul nz-menu nzTheme="dark" nzMode="inline">
   <li nz-menu-item [routerLink]="'/meters/123'">
-    <span>nav 1</span>
+    <i nz-icon nzType="dashboard" nzTheme="outline"></i>
+    <span>Meter 1</span>
   </li>
   <li nz-menu-item [routerLink]="'/meters/234'">
-    <span>nav 2</span>
+    <i nz-icon nzType="dashboard" nzTheme="outline"></i>
+    <span>Meter 2</span>
   </li>
   <li nz-menu-item [routerLink]="'/meters/345'">
-    <span>nav 3</span>
+    <i nz-icon nzType="dashboard" nzTheme="outline"></i>
+    <span>Meter 3</span>
   </li>
   <li nz-menu-item [routerLink]="'/meters/456'">
-    <span>nav 4</span>
+    <i nz-icon nzType="dashboard" nzTheme="outline"></i>
+    <span>Meter 4</span>
   </li>
 </ul>
