adds endpoint for querying the data

--- a/meter-ui/src/app/alerts/alerts.component.html
+++ b/meter-ui/src/app/alerts/alerts.component.html
@@ -3,7 +3,7 @@
   <nz-table #basicTable [nzData]="dataSet" [nzNoResult]="empty" [nzShowPagination]="false">
     <thead>
     <tr>
-      <th>Severity</th>
+      <th nzWidth="100px">Severity</th>
       <th>Value</th>
       <th>Timestamp</th>
     </tr>
