--- a/meter-ui/src/app/meter-list/meter-list.component.html
+++ b/meter-ui/src/app/meter-list/meter-list.component.html
@@ -2,19 +2,19 @@
   <img src="assets/logo_white.png" width="100" style="margin-left: 25px;">
 </div>
 <ul nz-menu nzTheme="dark" nzMode="inline">
-  <li nz-menu-item [routerLink]="'/meters/123'">
+  <li nz-menu-item [routerLink]="'/meters/meter1'">
     <i nz-icon nzType="dashboard" nzTheme="outline"></i>
     <span>Meter 1</span>
   </li>
-  <li nz-menu-item [routerLink]="'/meters/234'">
+  <li nz-menu-item [routerLink]="'/meters/meter2'">
     <i nz-icon nzType="dashboard" nzTheme="outline"></i>
     <span>Meter 2</span>
   </li>
-  <li nz-menu-item [routerLink]="'/meters/345'">
+  <li nz-menu-item [routerLink]="'/meters/meter3'">
     <i nz-icon nzType="dashboard" nzTheme="outline"></i>
     <span>Meter 3</span>
   </li>
-  <li nz-menu-item [routerLink]="'/meters/456'">
+  <li nz-menu-item [routerLink]="'/meters/meter4'">
     <i nz-icon nzType="dashboard" nzTheme="outline"></i>
     <span>Meter 4</span>
   </li>
