--- a/meter-ui/src/app/meter-detail/meter-detail.component.html
+++ b/meter-ui/src/app/meter-detail/meter-detail.component.html
@@ -12,6 +12,6 @@
       <i nz-icon nzType="right" nzTheme="outline"></i>
     </button>
   </div>
-  <app-chart [meterId]="meterId" [from]="from" [to]="to"></app-chart>
-  <app-alerts [meterId]="meterId" [from]="from" [to]="to"></app-alerts>
+  <app-chart #chart [meterId]="meterId" [from]="from" [to]="to" *ngIf="renderContent"></app-chart>
+  <app-alerts #alerts [meterId]="meterId" [from]="from" [to]="to" *ngIf="renderContent"></app-alerts>
 </div>
